# quality_control

./: .clang-format  .gitignore  README.md  meson.build
docs/: equality.md
quality_control/: quality_control.cpp  quality_control.hpp
quality_control/base/: base.hpp
quality_control/equality/: equality.hpp
quality_control/suite/: suite.hpp
quality_control/test/: test.hpp
subprojects/: logger.wrap
tests/: meson.build  qc_equality_test.cpp  unit-tests.cpp  utils.cpp  utils.hpp
tests/common/: equality_test.hpp
tests/global/: global_equality_test.cpp
tests/quality_control/: qc_equality_test.cpp
